# kicad-mcp

./: .gitattributes  .gitignore  AUFTRAGSLISTE.md  Bug.md  CHANGELOG.md  CLAUDE.md  LICENSE.MIT  MCP_DOCTOR_FINDINGS.md  NOTICE  PLAN.md  README.de.md  README.md  RELEASE_NOTES_v1.0.0.md  install.ps1  install.sh  install_plugin.bat  install_plugin.sh  main.py  make_pcm_zip.py  pyproject.toml  start_mcp.bat  start_mcp.sh  start_mcp_wsl.sh  verify_kicad_ipc.py
.claude/hooks/: session-start.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  pcm-zip.yml
docs/: DESIGN_dependency_resilienz.md  DIAGNOSE_MCP_nicht_verbunden.md  INCREMENT2_live_smoketest.md  KICADMCP_footprint_resync_HOWTO.md  board_link_vocabulary_plan.md  clearance_engine_tests.md  demo_kits_todo.md  interaction_gaps_plan.md  kicad11_vorbereitung.md  kicad_mcp_behavior_audit.md  kicad_mcp_behavior_delta.md  kit_datasheet_reviews.md  optimierungsplan_schematic.md  pinout_pipeline_spec.md  roadmap.md  schaltplan_regeln.md  startup_panel_plan.md  superfeatures.md  warm-server-plan.md
examples/circuit_block/: README.md
kicad_mcp/: context.py  demo.py  selftest.py  server.py  tool_registry.py
kicad_mcp/.cache/: footprint_index.json  symbol_index.json
kicad_mcp/cache/: __init__.py  file_cache.py
kicad_mcp/generators/: __init__.py  esphome_parser.py  footprint_lib.py  kicad_library_index.py  netlist_expander.py  schematic_patcher.py  schematic_scorer.py  sexpr.py  symbol_author.py  symbol_cache.py  template_matcher.py  validator.py
kicad_mcp/generators/circuit_block/: _block_to_patch.py
kicad_mcp/generators/common/: __init__.py  bbox.py  bus_detect.py  classify.py  constants.py  fd_refine.py  geometry.py  routing.py
kicad_mcp/generators/ltspice2kicad/: mapping.py  models.py  parser.py  scaler.py  symbol_mapping.json  symbols.py
kicad_mcp/generators/pcb/: __init__.py  builder.py  place.py  route.py
kicad_mcp/generators/pinout/: __init__.py  __main__.py  _circuit_block_compat.py  diff.py  symbol_pins.py  type_map.py
kicad_mcp/generators/review/: __init__.py
kicad_mcp/generators/schematic/: builder.py  constraint_solver.py  defrag_place.py  layout_measure.py  layout_optimizer.py  layout_rules.py  netlist_check.py  place.py  route.py
kicad_mcp/prompts/: __init__.py  templates.py
kicad_mcp/resources/: __init__.py  netlist_resources.py  pattern_resources.py
kicad_mcp/resources/data/: fab_parts_jlcpcb.json  safety_spacing_iec60664.json  selftest_board.json
kicad_mcp/tools/: __init__.py  _warm_daemon.py  audit_tools.py  bom_consolidate_tools.py  circuit_block_tools_helpers.py  circuit_template_tools.py  cli_export_tools.py  connectivity_worker.py  design_rules_tools.py  drc_tools.py  erc_tools.py  esphome_tools.py  export_tools.py  fab_parts_tools.py  footprint_resync_tools.py  footprint_resync_worker.py  footprint_search_tools.py  generation_tools.py  ipc_interact_tools.py  ipc_live_diff.py  ipc_live_tools.py  ipc_markup_tools.py  ipc_tools.py  ltspice_tools.py  netlist_tools.py  pattern_tools.py  pcb_geometry_tools.py  pcb_patch_tools.py  pcb_render_tools.py  pcb_session_worker.py  pcb_tools.py  pinout_tools.py  polar_grid_tools.py  project_tools.py  review_tools.py  safety_tools.py  sch_patch_tools.py  schematic_tools.py  sim_tools.py  test_points_tools.py  (+2 more)
kicad_mcp/training/: detect_content.py  extract_pages.py
kicad_mcp/utils/: __init__.py  board_open_guard.py  circuit_templates.py  component_utils.py  design_rules.py  drc_history.py  env.py  fab_parts.py  file_utils.py  find_kicad_python.py  ipc_session.py  kicad_utils.py  netlist_parser.py  path_env.py  pcb_board_parse.py  pcb_clearance.py  pcb_geometry.py  pcb_net_format.py  placement_eval.py  safety_spacing.py  sch_geometry.py  schematic_parse.py  sexpr_parser.py  spawned_registry.py  svg_render.py  test_points.py  wsl_path.py
plugin/: FIX_LINKS_BRIEFING.md  README.md  VERSIONS.md  __init__.py  backends.py  banner.py  board_links.py  chat_dialog.py  chat_markdown.py  chat_theme.py  claude_action.py  claude_bridge.py  claude_options.py  demo_kits.py  demo_runner.py  deps.py  diagnose.py  dock.py  e2e_runner.py  env_resolve.py  i18n.py  installer.py  ipc_setup.py  mcp_config.py  preflight.py  runtime_env.py  server_manager.py  server_probe.py  settings.py  setup_dialog.py  superfeatures.py  terminal.py  updater.py  version.py
plugin/mcp/kicad_mcp/: __init__.py  config.py  demo.py  selftest.py  server.py  tool_registry.py
plugin/mcp/kicad_mcp/cache/: __init__.py  (+1 more)
scripts/: check_kipy.py  compose_demo_kits.py  extend_kicad10_actions.py  gui_smoke.py  kicad_capability_probe.py  setup-hooks.sh  setup_container_kicad.sh  sync_bundle.py
tests/: conftest.py  live_ipc_harness.py  test_add_arc_to_pcb.py  test_all_tools_dynamic.py  test_ampacity.py  test_audit_power_tree.py  test_board_open_guard.py  test_bom_consolidate.py  test_bundle_sync.py  test_buried_vias.py  test_bus_infer.py  test_bus_tools.py  test_center_clearance.py  test_circuit_block_tools.py  test_circuit_templates.py  test_clearance_tools.py  test_clone_layout.py  test_clone_routing.py  test_cluster_block_outside_pcb.py  test_config_platform.py  test_connectivity_overview.py  test_connectivity_tools.py  test_delete_pcb_routing.py  test_demo.py  test_demo_kits.py  test_design_rules.py  test_design_rules_tools.py  test_drc_timeout.py  test_drc_triage.py  test_env_loader.py  test_env_resolve.py  test_fab_parts.py  test_file_cache.py  test_find_kicad_python.py  test_footprint_resync.py  test_footprint_search_tools.py  test_generate_erc_gate.py  test_generation_minimal_spec.py  test_intersheet_labels.py  test_ipc_auto_open.py  (+84 more)
tests/PCB/medium_8pin/: medium_8pin.dsn  medium_8pin.kicad_pcb  medium_8pin.kicad_pro  medium_8pin.kicad_sch  medium_8pin.ses  medium_8pin_routed.kicad_pcb  medium_8pin_routed.kicad_prl  medium_8pin_routed.kicad_pro
tests/PCB/tiny_2pin/: tiny_2pin.dsn  tiny_2pin.kicad_pcb  tiny_2pin.kicad_pro  tiny_2pin.kicad_sch  tiny_2pin.ses  tiny_2pin_routed.kicad_pcb  tiny_2pin_routed.kicad_prl  tiny_2pin_routed.kicad_pro
tests/data/reference_schematics/: NOTE.md
(+176 files in other folders)
