[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version: plugin/version.py (``__version__``).
# pyproject therefore declares the version ``dynamic`` and reads it from there, so
# one bump in version.py moves the GUI plugin AND the packaged wheel together.
# (Previously pyproject carried a divergent static ``1.0.0`` while version.py —
# which calls itself the single source of truth — sat at ``0.4.0``.)
[tool.hatch.version]
path = "plugin/version.py"

[tool.hatch.build.targets.wheel]
packages = ["kicad_mcp"]

[project]
name = "kicad-mcp"
dynamic = ["version"]
description = "Model Context Protocol (MCP) server for KiCad electronic design automation (EDA) files"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "KiCad MCP Contributors" }
]
maintainers = [
    { name = "KiCad MCP Contributors" }
]
keywords = [
    "kicad",
    "eda",
    "electronics",
    "schematic",
    "pcb",
    "mcp",
    "model-context-protocol",
    "ai",
    "assistant"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=2.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "defusedxml>=0.7.0",  # Secure XML parsing
    "jsonschema>=4.0.0",  # circuit_block schema validation
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.10.0",  # circuit_block extract_pdf_tables / extract_circuit_from_pdf
]
# Mirror of the ``[dependency-groups] dev`` list below as a PEP-621 extra so
# ``pip install -e ".[dev]"`` (used by .github/workflows/ci.yml) resolves on every
# pip — dependency-groups need ``--group`` and silently fall through the CI
# ``|| pip install -e .`` fallback, which then ran pytest with no pytest installed.
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    # IPC client (kipy). Headless-importable; pinned to the KiCad-10.0-matching
    # release so the test-suite resolves real kipy/protobuf deterministically
    # instead of each test faking ``sys.modules['kipy']`` ad-hoc (the source of
    # an order-dependent flake). Tests still fake the live board/connection.
    "kicad-python==0.7.1",
]

[project.urls]
"Homepage" = "https://github.com/ChrisRudi/kicad-mcp"
"Bug Tracker" = "https://github.com/ChrisRudi/kicad-mcp/issues"
"Documentation" = "https://github.com/ChrisRudi/kicad-mcp#readme"
"Upstream" = "https://github.com/lamaalrajih/kicad-mcp"

[project.scripts]
kicad-mcp = "kicad_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",  # Security linting for pre-commit hooks
    "kicad-python==0.7.1",  # IPC client (kipy) — see [project.optional-dependencies].dev
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
security = [
    "bandit>=1.7.0",
    "safety>=3.0.0",
]
performance = [
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.0",
]
visualization = [
    "cairosvg>=2.7.0",     # SVG to PNG conversion
    "Pillow>=10.0.0",      # Image processing
    "playwright>=1.40.0",  # Browser automation (optional)
]
training = [
    "pymupdf>=1.24.0",    # PDF extraction for training pipeline
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM", # flake8-simplify
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (handled by other tools)
    "B905",  # zip() without an explicit strict= parameter
]
unfixable = [
    "B",  # Avoid trying to fix flake8-bugbear violations
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # Use of assert detected
    "D103",  # Missing docstring in public function
    "SLF001", # Private member accessed
]
"kicad_mcp/config.py" = [
    "E501",  # Long lines in config are ok
]

[tool.ruff.lint.isort]
known-first-party = ["kicad_mcp"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "mcp.*",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=kicad_mcp",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    # Ratchet target: 35 → 45 → 55, raised gradually as the pure
    # text-patchers / parsers gain direct unit coverage. Only bites a local
    # `pytest` run with coverage on — CI runs `--no-cov` (see ci.yml).
    "--cov-fail-under=45",
    "-ra",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take more than a few seconds",
    "requires_kicad: Tests that require KiCad CLI to be installed",
    "performance: Performance benchmarking tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::RuntimeWarning:asyncio",
]

[tool.coverage.run]
source = ["kicad_mcp"]
branch = true
omit = [
    "tests/*",
    "kicad_mcp/__init__.py",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601", "B404", "B603", "B110", "B112"]  # Skip low-severity subprocess and exception handling warnings

[tool.bandit.assert_used]
skips = ["*_test.py", "*/test_*.py"]

[tool.pylint.typecheck]
# Modules that are NOT present in the plain-CPython lint/CI environment but ARE
# at runtime: pcbnew + wx ship only inside KiCad's bundled Python; kipy is the
# KiCad IPC client (separate ``kicad-python`` wheel, installed by the plugin) and
# google.protobuf is its wire-format transport (pulled in by kicad-python, hence
# absent wherever kipy is); cairosvg / reportlab are optional render / PDF-test
# extras. Suppressing import-error for them keeps the scoreboard about real
# defects, not the absence of KiCad on a CI runner. (The code self-skips when
# they're missing.)
ignored-modules = [
    "pcbnew",
    "wx",
    "kipy",
    "google.protobuf",
    "cairosvg",
    "reportlab",
]

[tool.pylint."MESSAGES CONTROL"]
# Disabled checks — rationale per cluster:
# logging-fstring-interpolation (W1203): we use f-strings; lazy-% is anachronistic.
# broad-exception-caught (W0718): intentional around optional deps (kipy/pcbnew/wx) and IPC bus.
# unused-argument (W0613): FastMCP tool funcs accept ctx even when not consumed.
# protected-access (W0212): generators reach into SExpr internals on purpose.
# global-statement (W0603): module-level caches (footprint-index, _pcbnew) are intentional.
# cell-var-from-loop (W0640): inner-loop closures here capture correctly.
# fixme (W0511): TODOs are tracked separately, not as lint noise.
# redefined-outer-name (W0621): pytest fixtures pass by name → constant FP in tests/.
disable = [
    "logging-fstring-interpolation",
    "broad-exception-caught",
    "unused-argument",
    "protected-access",
    "global-statement",
    "cell-var-from-loop",
    "fixme",
    "redefined-outer-name",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kicad_mcp*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"kicad_mcp" = ["prompts/*.txt", "resources/**/*.json"]
